--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.error.whitelabel.enabled=false
-spring.datasource.jndi-name=java:comp/env/jdbc/MyDB
+
 spring.aop.proxy-target-class=true
+
+spring.main.banner-mode=off
+
+server.display-name=Scripting
+server.port=8080
