--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-instrument</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.drools</groupId>
@@ -107,7 +112,7 @@
 	</dependencies>
 
 	<build>
-		<!--<sourceDirectory>src</sourceDirectory>-->
+		<!--<sourceDirectory>src</sourceDirectory> -->
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
